--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -37,4 +37,7 @@
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>MainController</welcome-file>
+    </welcome-file-list>
 </web-app>
