--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,16 +29,21 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.commons-logging-1.2.jar=D:\\Download\\lib\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=C:\\Users\\Admin\\Desktop\\lib\\lib\\commons-logging-1.2.jar
 file.reference.fluent-hc-4.5.5.jar=D:\\Download\\lib\\fluent-hc-4.5.5.jar
+file.reference.fluent-hc-4.5.5.jar-1=C:\\Users\\Admin\\Desktop\\lib\\lib\\fluent-hc-4.5.5.jar
 file.reference.gson-2.8.2.jar=D:\\Download\\lib\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=C:\\Users\\Admin\\Desktop\\lib\\lib\\gson-2.8.2.jar
 file.reference.httpclient-4.5.5.jar=D:\\Download\\lib\\httpclient-4.5.5.jar
+file.reference.httpclient-4.5.5.jar-1=C:\\Users\\Admin\\Desktop\\lib\\lib\\httpclient-4.5.5.jar
 file.reference.httpcore-4.4.9.jar=D:\\Download\\lib\\httpcore-4.4.9.jar
+file.reference.httpcore-4.4.9.jar-1=C:\\Users\\Admin\\Desktop\\lib\\lib\\httpcore-4.4.9.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.6.3.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/sqljdbc4.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.6.3.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -48,7 +53,12 @@ javac.classpath=\
     ${file.reference.fluent-hc-4.5.5.jar}:\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.httpclient-4.5.5.jar}:\
-    ${file.reference.httpcore-4.4.9.jar}
+    ${file.reference.httpcore-4.4.9.jar}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.fluent-hc-4.5.5.jar-1}:\
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.httpclient-4.5.5.jar-1}:\
+    ${file.reference.httpcore-4.4.9.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
