--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.fluent-hc-4.5.5.jar-2=C:\\Users\\Acer\\Desktop\\fpt\\SWP391\\lib\
 file.reference.gson-2.8.2.jar-2=C:\\Users\\Acer\\Desktop\\fpt\\SWP391\\lib\\gson-2.8.2.jar
 file.reference.httpclient-4.5.5.jar-2=C:\\Users\\Acer\\Desktop\\fpt\\SWP391\\lib\\httpclient-4.5.5.jar
 file.reference.httpcore-4.4.9.jar=C:\\Users\\Acer\\Desktop\\fpt\\SWP391\\lib\\httpcore-4.4.9.jar
+file.reference.javax.mail-1.6.0.jar=C:\\Users\\Acer\\Desktop\\fpt\\SWP391\\lib\\javax.mail-1.6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.fluent-hc-4.5.5.jar-2}:\
     ${file.reference.gson-2.8.2.jar-2}:\
     ${file.reference.httpclient-4.5.5.jar-2}:\
-    ${file.reference.httpcore-4.4.9.jar}
+    ${file.reference.httpcore-4.4.9.jar}:\
+    ${file.reference.javax.mail-1.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
